<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.varenia.vaart.BaseHome">


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/textButton"
        style="@style/Theme.App"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/createmeeting"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:visibility="gone"
        app:backgroundTint="@color/colorPrimaryDark"
        app:icon="@drawable/baseline_person_add_alt_1_white_48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <include layout="@layout/invitation_layout"/>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/extended_videocall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="16dp"
        android:contentDescription="@string/extended_fab_content_desc"
        android:text="@string/extended_fab_label"
        app:icon="@drawable/baseline_video_call_white_48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Theme.App"
        />



</androidx.constraintlayout.widget.ConstraintLayout>